bin_PROGRAMS = 	argv \
				asprintf \
				isdigit \
				pointer-str \
				copy	\
				strlen-sizeof \
				xstrcat
				
argv_SOURCES = argv.c
				
asprintf_SOURCES = asprintf.c

isdigit_SOURCES = isdigit.c

pointer_str_SOURCES = pointer_str.c

copy_SOURCES = strcpy_strdup.c

strlen_sizeof_SOURCES = strlen_sizeof.c

xstrcat_SOURCES = xstrcat.c